Extract cell value according to cell address

--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -6,8 +6,15 @@ th, td {
     text-align: left;
 }
 
+#preview {
+    background: lightgreen;
+    text-align: center;
+    padding: 1em;
+}
+
 #drop {
     background: lightblue;
     text-align: center;
     padding: 1em;
+    margin-top: 5px;
 }
