--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -9,11 +9,11 @@
     margin-top: 5px;
 }
 
-.subject-list {
-    width: 300px;
-}
-
 .list-group,
 .list-group-item {
     border: none;
+}
+
+table {
+    table-layout: fixed;
 }
