--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -1,21 +1,5 @@
-#error {
-    display: none;
-}
-
-#drop {
-    background: lightblue;
-    text-align: center;
-    padding: 1em;
-    margin-top: 5px;
-}
-
-.list-group,
-.list-group-item {
-    border: none;
-}
-
-.btn {
-    margin-bottom: 15px;
+body {
+    background: lightskyblue;
 }
 
 table {
@@ -29,4 +13,47 @@ th, td {
 th {
     background: #F0F0F0;
     text-align: center;
+}
+
+h1, h3, p {
+    padding-left: 15px;
+}
+
+h3 {
+    opacity: 0.7;
+}
+
+.box {
+    background: white;
+    border: 1px solid grey;
+    padding: 5px 10px;
+    margin: 10px 0;
+    -webkit-box-shadow: 3px 3px 8px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    3px 3px 8px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         3px 3px 8px 0px rgba(50, 50, 50, 0.75);
+}
+
+.list-group,
+.list-group-item {
+    border: none;
+}
+
+.btn {
+    margin-bottom: 15px;
+}
+
+#my-subjects-button {
+    direction: rtl;
+    padding-right: 15px;
+}
+
+#error {
+    display: none;
+}
+
+#drop {
+    background: lightblue;
+    text-align: center;
+    padding: 1em;
+    margin-top: 5px;
 }
