--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -52,8 +52,31 @@ h3 {
 }
 
 #drop {
+    display: none;
     background: lightblue;
     text-align: center;
     padding: 1em;
     margin-top: 5px;
+}
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    background-color: lightskyblue;
+    z-index: 99;
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-size: 200%;
+    color: white;
+}
+
+#loading span {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-45%, -50%);
 }
