--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -1,74 +1,5 @@
-body {
-    background: #e0e0e0;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    -webkit-box-shadow: 0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-    -moz-box-shadow:    0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-    box-shadow:         0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-}
-
-.site-branding {
-    padding: 1em;
-    background: #009688;
-    color: white;
-}
-
-nav {
-    background: #009688;
-}
-
-.main-menu-button {
-    background: #009688;
-    border: none;
-    color: white;
-    font-size: 0.7em;
-    padding-bottom: 1px;
-    padding-top: 1px;
-}
-
-.main-menu {
-    display: none;
-}
-
-.main-menu-button:hover {
-    background: #00796b;
-}
-
-.main-menu .nav-pills > li > a {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    color: white;
-    border-top: 1px solid white;
-}
-
-.main-menu .nav-pills > li > a:hover {
-    background: #00796b;
-}
-
-.box {
-    background: #26a69a;
-    color: black;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 1px;
-    padding-bottom: 10px;
-    margin: 2em auto;
-    -webkit-box-shadow: 0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-    -moz-box-shadow:    0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-    box-shadow:         0px 3px 5px 3px rgba(50, 50, 50, 0.2);
-}
-
-.box p {
-    opacity: 0.87;
-}
-
 table {
     table-layout: fixed;
-    margin: 10px 0;
 }
 
 th, td {
@@ -84,49 +15,8 @@ td {
     height: 75px;
 }
 
-h3, p {
-    padding-left: 15px;
-}
-
-h1 {
-    font-weight: bold;
-}
-
-h2 {
-    font-size: 1.75em;
-    font-weight: bold;
-    color: black;
-    opacity: 0.87;
-    padding-bottom: 10px;
-    border-bottom: 2px solid #cddc39;
-}
-
-h3 {
-    opacity: 0.54;
-}
-
-.my-subjects-body .list-group-item {
+#my-subjects .list-group-item {
     border: none;
-    padding-bottom: 0;
-    background: #26a69a;
-}
-
-.btn {
-    margin-bottom: 15px;
-}
-
-.my-subjects-arrow {
-    padding-right: 15px;
-    float: right;
-}
-
-.my-subjects-body {
-    display: none;
-}
-
-.my-subjects-button {
-    direction: rtl;
-    padding-right: 15px;
 }
 
 #error {
